Edit token -> driver_token to avoid conflict with login token & Fix tests

--- a/app/templates/stops/_list.mustache
+++ b/app/templates/stops/_list.mustache
@@ -235,7 +235,7 @@
                 <div class="dropdown-spacing">
                   {{#i18n}}plannings.edit.dialog.deliver.title{{/i18n}}
                 </div>
-                <li><a href="/routes/{{route_id}}/mobile?token={{driver_token}}" ><i class="fa fa-link fa-fw"></i> {{#i18n}}plannings.edit.deliver_send.access{{/i18n}}</a></li>
+                <li><a href="/routes/{{route_id}}/mobile?driver_token={{driver_token}}" ><i class="fa fa-link fa-fw"></i> {{#i18n}}plannings.edit.deliver_send.access{{/i18n}}</a></li>
                 <li class="link device-operation" data-service="deliver" data-operation="send" data-route-id="{{route_id}}">
                     <i class="fa fa-mobile fa-rotate-90 fa-fw"></i>
                     {{#i18n}}plannings.edit.deliver_send.action{{/i18n}}
