--- a/app/views/customers/_profile_router_inputs.html.erb
+++ b/app/views/customers/_profile_router_inputs.html.erb
@@ -10,7 +10,7 @@
   <%= hidden_field :customer, :profile_id %>
 <% end %>
 
-<div id="customer_router_input" class="row form-group">
+<div id="customer_router_input" class="row">
   <label class="col-md-offset-2 col-md-8" for="customer_router"><%= t('activerecord.attributes.customer.router') %></label>
   <div class="col-md-offset-2 col-md-8 field">
     <div class="input-group">
