--- a/app/views/destinations/_form.html.haml
+++ b/app/views/destinations/_form.html.haml
@@ -6,7 +6,7 @@
     = f.text_field :name, required: true
     = f.text_field :street, {help: t('web.form.helpers.street'), class: "pointing", append: content_tag('span', content_tag('button', content_tag('i', '', class: 'fa fa-crosshairs fa-fw'), class: 'btn btn-default', type: 'button', title: t('.locate_manually')), class: 'input-group-btn' )}
     = f.text_field :detail, help: t('.detail_help')
-    #destination_city_input.row.form-group
+    #destination_city_input.mb-3.row
       %label.sr-only{for: "destination_postalcode"}= t 'activerecord.attributes.destination.postalcode'
       %label.sr-only{for: "destination_city"}= t 'activerecord.attributes.destination.city'
       %label.col-md-offset-2.col-md-8.field
@@ -19,7 +19,7 @@
           %span.input-group-addon
             %i.fa.fa-map.fa-fw
     - if !@destination.customer.with_state
-      #destination_country_input.row.form-group
+      #destination_country_input.mb-3.row
         %label.col-md-offset-2.col-md-8.field
           = "#{t('activerecord.attributes.destination.state')}/#{t('activerecord.attributes.destination.country')}"
         .col-md-offset-2.col-md-8.field
@@ -31,7 +31,7 @@
     - else
       = f.text_field :country, {placeholder: t('.country_default', n: @destination.customer.default_country)}
     -# = @destination.geocoding_result
-    .row.form-group
+    .mb-3.row
       %label.col-md-offset-2.col-md-8.field{for: "destination_geocoding"}= t 'activerecord.attributes.destination.geocoding_accuracy'
       .col-md-offset-2.col-md-8.field
         #geocoding_accuracy{ class: ('d-none' unless @destination.geocoding_accuracy) }
@@ -66,10 +66,10 @@
         %input.form-control{ name: "destination[displayed_geocoding_result]", value: @destination.geocoding_result['free'], readonly: 'readonly'}
       .col-md-offset-2.col-md-8.field
         #reverse-geocode
-    .row.form-group
+    .mb-3.row
       .col-md-offset-2.col-md-offset-2.col-md-8.field
         #map.map-fixed-size
-    #destination_geoloc_input.row.form-group
+    #destination_geoloc_input.mb-3.row
       %label.sr-only{for: "destination_lat"}= t 'activerecord.attributes.destination.lat'
       %label.sr-only{for: "destination_lnt"}= t 'activerecord.attributes.destination.lng'
       %label.col-md-offset-2.col-md-8.field
@@ -106,8 +106,10 @@
       %i.fa.fa-plus.fa-fw
       = t('destinations.form.visit.new')
   - unless @destination.customer.enable_multi_visits
-    %p.help-block
-      = t('destinations.form.visit.enable_multi_visits')
+    .mb-3.row
+      .col-md-offset-2.col-md-8
+        %p.help-block
+          = t('destinations.form.visit.enable_multi_visits')
   = hidden_field :destination, :geocoder_version, :value => @destination.geocoder_version
   = hidden_field :destination, :geocoded_at, :value => @destination.geocoded_at
   = f.submit
