Edit stops list

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -780,6 +780,10 @@ div.grid-container {
   margin-bottom: 0 !important;
 }
 
+.ml-0 {
+  margin-left: 0px !important;
+}
+
 .mr-2 {
   margin-right: 6px !important;
 }
