--- a/app/templates/routes_by_vehicles/_show.mustache
+++ b/app/templates/routes_by_vehicles/_show.mustache
@@ -136,7 +136,7 @@
       {{#stops}}
         {{#wait_time}}
           <li class="wait ui-state-disabled list-group-item">
-            <i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.wait{{/i18n}} {{wait_time}}
+            <i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.wait{{/i18n}} : {{wait_time}}
           </li>
         {{/wait_time}}
         {{#rest}}
